k8s/apps/lldap/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: apps-lldap
  labels:
    app.kubernetes.io/name: lldap
    app.kubernetes.io/instance: lldap
    app.kubernetes.io/managed-by: kubectl
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-xinfra-ru-tls
      hosts:
        - lldap.xinfra.ru
  rules:
    - host: lldap.xinfra.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  number: 17170
